--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.8-Alpha, 2018-10-24: Alan 3.0beta6
+v0.7.9-Alpha, 2018-10-31: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -50,6 +50,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN abbandonare_partita.      ---> 'quit'
   CAN accendere.                ---> turn_on
   CAN andare_a.                 ---> go_to
+  CAN annusare.                 ---> smell
   CAN aprire.                   ---> open
   CAN aprire_con.               ---> open_with
   CAN ascoltare.                ---> listen + listen0 | ascolta0 + ascolta
@@ -289,8 +290,7 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN shoot.       -- (at)
   CAN shoot_with.
   CAN sip.
-  CAN smell0.
-  CAN smell.
+--CAN smell0. --------------------> ** ATTRIBUTO ELIMINATO **
   CAN squeeze.
   CAN stand.       -- (up)
   CAN stand_on.
