--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.9-Alpha, 2018-10-31: Alan 3.0beta6
+v0.7.10-Alpha, 2018-11-01: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -145,6 +145,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN sedersi.                  ---> sit (down)
   CAN sedersi_su.               ---> sit_on
   CAN seguire.                  ---> follow
+  CAN sorseggiare.              ---> sip
   CAN spegnere.                 ---> turn_off
   CAN spingere.                 ---> push
   CAN spingere_con.             ---> push_with
@@ -289,7 +290,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN shake.
   CAN shoot.       -- (at)
   CAN shoot_with.
-  CAN sip.
 --CAN smell0. --------------------> ** ATTRIBUTO ELIMINATO **
   CAN squeeze.
   CAN stand.       -- (up)
